--- a/index.html
+++ b/index.html
@@ -3,31 +3,37 @@
   <head>
     <title>WhyDeck</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script
+		src='https://code.jquery.com/jquery-2.2.3.js'
+		integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="
+		crossorigin="anonymous"></script>
+	<script
+		src='https://code.jquery.com/ui/1.11.4/jquery-ui.js'
+		integrity="sha256-DI6NdAhhFRnO2k51mumYeDShet3I8AKCQf/tf7ARNhI="
+		crossorigin="anonymous"></script>
     <link rel='stylesheet' href='main.css'>
   </head>
   <body>
   	<section>
 		<div id='left'>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
-			<div class='card'></div>
+			<div id='c1' class='card' draggable="true"></div>
+			<div id='c2' class='card' draggable="true"></div>
+			<div id='c3' class='card' draggable="true"></div>
+			<div id='c4' class='card' draggable="true"></div>
+			<div id='c5' class='card' draggable="true"></div>
+			<div id='c6' class='card' draggable="true"></div>
+			<div id='c7' class='card' draggable="true"></div>
+			<div id='c8' class='card' draggable="true"></div>
+			<div id='c9' class='card' draggable="true"></div>
+			<div id='c10' class='card' draggable="true"></div>
+			<div id='c11' class='card' draggable="true"></div>
+			<div id='c12' class='card' draggable="true"></div>
+			<div id='c13' class='card' draggable="true"></div>
+			<div id='c14' class='card' draggable="true"></div>
+			<div id='c15' class='card' draggable="true"></div>
 		</div>
 		<div id='right'></div>
 	</section>
-	<script
-		src="http://code.jquery.com/jquery-2.2.3.js"
-		integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="
-		crossorigin="anonymous"></script>
 	<script src='main.js' type='text/javascript'></script>
-	
   </body>
 </html>
