refactored z index reset, added rotate upright functionality, border highlight on hover

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
   <body>
   	<section>
 		<div id='left'>
-			<div id='c1' class='card' draggable="true"></div>
-			<div id='c2' class='card' draggable="true"></div>
-			<div id='c3' class='card' draggable="true"></div>
-			<div id='c4' class='card' draggable="true"></div>
-			<div id='c5' class='card' draggable="true"></div>
-			<div id='c6' class='card' draggable="true"></div>
-			<div id='c7' class='card' draggable="true"></div>
-			<div id='c8' class='card' draggable="true"></div>
-			<div id='c9' class='card' draggable="true"></div>
-			<div id='c10' class='card' draggable="true"></div>
-			<div id='c11' class='card' draggable="true"></div>
-			<div id='c12' class='card' draggable="true"></div>
-			<div id='c13' class='card' draggable="true"></div>
-			<div id='c14' class='card' draggable="true"></div>
-			<div id='c15' class='card' draggable="true"></div>
+			<div id='c1' class='card'><p>Hello World</p></div>
+			<div id='c2' class='card'><p>Hello World</p></div>
+			<div id='c3' class='card'><p>Hello World</p></div>
+			<div id='c4' class='card'><p>Hello World</p></div>
+			<div id='c5' class='card'><p>Hello World</p></div>
+			<div id='c6' class='card'><p>Hello World</p></div>
+			<div id='c7' class='card'><p>Hello World</p></div>
+			<div id='c8' class='card'><p>Hello World</p></div>
+			<div id='c9' class='card'><p>Hello World</p></div>
+			<div id='c10' class='card'><p>Hello World</p></div>
+			<div id='c11' class='card'><p>Hello World</p></div>
+			<div id='c12' class='card'><p>Hello World</p></div>
+			<div id='c13' class='card'><p>Hello World</p></div>
+			<div id='c14' class='card'><p>Hello World</p></div>
+			<div id='c15' class='card'><p>Hello World</p></div>
 		</div>
 		<div id='right'></div>
 	</section>
