added jq ui css theme so modal would work

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>WhyDeck</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel='stylesheet' type='text/css' href='jquery-ui.css'>
 	<script
 		src='https://code.jquery.com/jquery-2.2.3.js'
 		integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="
